# minority_foodservice_app

./: CMakeLists.txt  README.md  main.cpp  translate.cpp
include/: translate.hpp
src/: db.cpp
